SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/CPQ_Playbook_Question__c.object-meta.xml
<CustomObject>
    <description>Specific deal question for CPQ quote generation</description>
    <label>CPQ Playbook Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>