SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/CPQ_Playbook_Question_Group__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Question_Group__c</fullName>
    <description>CPQ Playbook Question Group to which this question belongs</description>
    <inlineHelpText>CPQ Playbook Question Group to which this question belongs</inlineHelpText>
    <label>CPQ Playbook Question Group</label>
    <referenceTo>CPQ_Playbook_Question_Group__c</referenceTo>
    <relationshipLabel>CPQ Playbook Questions</relationshipLabel>
    <relationshipName>CPQ_Playbook_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>