SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Default_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Value__c</fullName>
    <description>Field from CPQ data object to use for default value for answer</description>
    <inlineHelpText>Field from CPQ data objects to use for default value for answer. Valid objects include: &apos;Account&apos;, &apos;Opportunity&apos;, &apos;Quote&apos;, &apos;Profile&apos;, &apos;UserRole&apos;, and &apos;User&apos;</inlineHelpText>
    <label>Default Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>