SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Value to use for default value for answer. If Default Field Value is populated, that takes precedence over this value.</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>