SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Default_Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If related question answer type is &apos;Boolean&apos;, value to use for default value for answer. If Default Field Value is populated, that takes precedence over this value.</description>
    <inlineHelpText>Default value for question&apos;s answer. If Default Field Value is populated, that takes precedence over this value.</inlineHelpText>
    <label>Default Value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>