SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Default_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Date__c</fullName>
    <description>If related question answer type is &apos;Date&apos;, value to use for default value for answer. If Default Field Value is populated, that takes precedence over this value.</description>
    <inlineHelpText>Default value for question&apos;s answer. If Default Field Value is populated, that takes precedence over this value.</inlineHelpText>
    <label>Default Value (Date)</label>
    <type>Date</type>
</CustomField>