SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Default_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Text__c</fullName>
    <description>If related question answer type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, value to use for default value for answer. If Default Field Value is populated, that takes precedence over this value.</description>
    <inlineHelpText>Default value for question&apos;s answer. If Default Field Value is populated, that takes precedence over this value.</inlineHelpText>
    <label>Default Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>