SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Order in which question should be displayed in its group. Lower numbers appear first</description>
    <inlineHelpText>Order in which question should be displayed in its group. Lower numbers appear first</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>