SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Extra information about question to be displayed in a help text tooltip</description>
    <inlineHelpText>Extra information about question to be displayed to Users in a help text tooltip</inlineHelpText>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>