SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if question is active and should appear in its group</description>
    <inlineHelpText>Determines if question is active and should appear in its group</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>