SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/IsHidden__c.field-meta.xml
<CustomField>
    <fullName>IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the user can see this question in CPQ. If not, the question still functions in the background</description>
    <inlineHelpText>Determines if Users can see this question in CPQ. If not, the question still functions in the background</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>