SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the question&apos;s answer can be modified</description>
    <inlineHelpText>Determines Users can modify the question&apos;s answer</inlineHelpText>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>