SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if question is required in order to generate quote</description>
    <inlineHelpText>Determines if question is required in order to complete the quote</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>