SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Displayed label in CPQ</description>
    <inlineHelpText>Displayed label Users see in CPQ</inlineHelpText>
    <label>Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>