SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Maximum_Record_Selections__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Record_Selections__c</fullName>
    <description>If question answer type is &apos;Record Lookup&apos;, maximum number of records that user is allowed to select as an answer.</description>
    <inlineHelpText>Maximum number of records that user is allowed to select as an answer.</inlineHelpText>
    <label>Maximum Record Selections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>