SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Picklist_Answers__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Answers__c</fullName>
    <description>Semi-colon delineated list of answer choices when Answer Type is Picklist or Multi-Select Picklist</description>
    <inlineHelpText>Semi-colon delineated list of answer choices</inlineHelpText>
    <label>Picklist Answers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>