SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Proposal_Label__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Label__c</fullName>
    <description>Displayed label in Proposal if used in an Answer Table</description>
    <inlineHelpText>Displayed label Users see in Proposal if used in an Answer Table</inlineHelpText>
    <label>Proposal Label</label>
    <length>250</length>
    <type>Text</type>
</CustomField>