SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Query_String__c.field-meta.xml
<CustomField>
    <fullName>Query_String__c</fullName>
    <description>Query string used to query records. This should NOT include any binded variables. Any dynamic alterations to this query should be handled in a CPQ Rule.</description>
    <inlineHelpText>Query string used to query records. This should NOT include any binded variables. Any dynamic alterations to this query should be handled in a CPQ Rule. Ensure all fields from the Record Display Fields field are also included here.</inlineHelpText>
    <label>Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>