SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Quote_Save_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Save_Field__c</fullName>
    <description>Quote Field API name where question&apos;s answer should be placed</description>
    <inlineHelpText>If populated, the question&apos;s answer will be populated in this Quote field. Only the Quote field API name should be placed in this field</inlineHelpText>
    <label>Quote Save Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>