SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Record_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>Record_Display_Fields__c</fullName>
    <description>Semi-colon delineated list of Field API names when Answer Type is Record Lookup</description>
    <inlineHelpText>List of Field API names to display for each queried record. Ensure that all fields listed here are also included in the Query String.</inlineHelpText>
    <label>Record Display Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>