SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Record_Selection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Record_Selection_Behavior__c</fullName>
    <description>Record selection behavior utilized for this record lookup question.</description>
    <inlineHelpText>Record selection behavior utilized for this record lookup question. &apos;Automatic Record Selection&apos;: All records returned (up to maximum if applicable) are automatically selected upon load and whenever the query string is dynamically adjusted.</inlineHelpText>
    <label>Record Selection Behavor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Record Selection (No Deselection)</fullName>
            </value>
            <value>
                <fullName>Automatic Record Selection (With Deselection)</fullName>
            </value>
            <value>
                <fullName>Manual Record Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>