SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Step_Value__c.field-meta.xml
<CustomField>
    <fullName>Step_Value__c</fullName>
    <description>If related question answer type is &apos;Currency&apos;, &apos;Decimal&apos; or &apos;Integer&apos;, step/increment value user is allowed to input in as an answer.</description>
    <inlineHelpText>If related question answer type is &apos;Currency&apos;, &apos;Decimal&apos; or &apos;Integer&apos;, step/increment value user is allowed to input in as an answer.</inlineHelpText>
    <label>Step Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>