SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question__c/fields/Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>Variable_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Variable Name used to identify piped text in Proposal PDF</description>
    <inlineHelpText>Unique Variable Name used to identify piped text in Proposal PDF</inlineHelpText>
    <label>Variable Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>